fix harf sample section size and spacing issues

--- a/src/harf-src/src/stylesheets/catalog.scss
+++ b/src/harf-src/src/stylesheets/catalog.scss
@@ -1,7 +1,7 @@
 #catalog {
     padding-block: 3.5vw;
     padding-inline: 5vw;
-    width: 83vw;
+    width: 73vw;
     justify-content: space-between;
     align-items: center;
     display: flex;
